<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">itsonin</string>

    <string name="discover">@string/app_name</string>
    <string name="my_events">My Events</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="purchase">Purchase</string>

    <string name="not_implemented">Not implemented</string>
    <string name="send_email">Send email</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="picnic">Picnic</string>
    <string name="picnic_desc">Do you fancy a picnic in the park?</string>
    <string name="going_out">Going Out</string>
    <string name="going_out_desc">Oh you, had, the time of your life</string>
    <string name="rally_protest">Rally/Protest</string>
    <string name="rally_protest_desc">Unite and show the people!</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_desc">Happy birthday to who, happy birthday to who?</string>
    <string name="festival">Festival</string>
    <string name="festival_desc">Food, music, crowds, what more could you want?</string>
    <string name="mischief">Mischief</string>
    <string name="mischief_desc">Don\'t talk about fight club</string>
    <string name="sport">Sport</string>
    <string name="sport_desc">Run Forest run!</string>
    <string name="watch_film">Watch a Film</string>
    <string name="watch_film_desc">The popcorn and soda are waiting for you</string>
    <string name="other">Misc/Other</string>
    <string name="other_desc">For those outliers who don\'t fit elsewhere</string>

    <string name="attending_desc">Events you are attending</string>
    <string name="hosting_desc">Events you are hosting</string>
    <string name="invites_desc">Events you have been invited to</string>
    <string name="no_events_found">No Events Found</string>

    <string name="add_event">Create event</string>
    <string name="edit_event">Edit event</string>
    <string name="cancel_event_title">Cancel event</string>
    <string name="cancel_event_message">WARNING!  If you cancel this event, you will not be able to reactivate it.</string>
    <string name="title_hint">Name your event</string>
    <string name="host_hint">Your name</string>
    <string name="guest_hint">Your name</string>
    <string name="date_hint">Event date</string>
    <string name="start_time_hint">Start time</string>
    <string name="end_time_hint">End time</string>
    <string name="text_hint">More details</string>
    <string name="ends_at">Ends at</string>
    <string name="place_hint">Where\'s it happening?</string>
    <string name="address_hint">Address</string>
    <string name="hosted_by">hosted by\u0020</string>
    <string name="at_time">\u0020@\u0020</string>
    <string name="until_time">\u0020\u2013\u0020</string>
    <string name="optional_details">Details (optional)</string>
    <string name="send_invite">Send invite to</string>
    <string name="invite_text">%1$s invites you to %2$s, click %3$s for more info</string>
    <string name="attend_button_info_text">Would you like to attend this event?</string>
    <string name="decline_button_info_text">You are attending this event</string>
    <string name="cancel_button_info_text">You are hosting this event</string>

    <string name="guest_host">hosting event</string>
    <string name="guest_attending_short">yes</string>
    <string name="guest_declined_short">no</string>
    <string name="guest_pending_short">maybe</string>

    <string name="event_cancelled">CANCELLED</string>
    <string name="event_expired">EXPIRED</string>

    <string name="no_guests_attending">No guests are attending this event</string>
    <string name="no_guests_declined">No guests have declined this event</string>
    <string name="no_comments">This event does not yet have any comments</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="get_directions">get directions</string>
    <string name="attend">attend</string>
    <string name="decline">decline</string>
    <string name="decline_button">rain check</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="cancel_event">cancel event</string>
    <string name="cancel_event_cancel">don\'t cancel it</string>
    <string name="cancel_event_confirm">cancel this event</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>

    <string name="no_network">No network connection</string>
    <string name="connection_error">Coludn\'t connect to server</string>
    <string name="created_event">Event created</string>
    <string name="updated_event">Event updated</string>
    <string name="cancelled_event">Event cancelled</string>
    <string name="attending_event">Attending event</string>
    <string name="attending_event_need_name">You must enter a name to attend</string>
    <string name="declined_event">Event has been declined</string>

    <string name="this_event_is_private">This event is private</string>

    <string name="venue_title">VENUE</string>
    <string name="attending_title">GUESTS</string>
    <string name="comments_title">COMMENTS</string>
    <string name="attending_lower_title">guests</string>
    <string name="comments_lower_title">comments</string>

    <string name="delete_information">Delete private information</string>
    <string name="delete_information_summary">Remove connection to all private events</string>
    <string name="delete_information_summary_verify">
        Remove connection to all private events?
        You will no longer have access to your private events.
        This cannot be undone.
    </string>
    <string name="deleted_information">Deleted private information</string>

    <string name="welcome_screen">Itsonin is everything that\'s going on in your town and in your life
        - kept completely secure and anonymous.  See what\'s on in your community today.</string>

    <string name="guest">guest</string>
    <string name="guests">guests</string>


</resources>
