<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingLeft="@dimen/card_inner"
                    android:paddingRight="@dimen/card_inner"
                    android:orientation="vertical"
                    >

                <Spinner
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/form_text"
                        android:paddingTop="@dimen/card_inner"
                        />

                <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/form_text"
                        android:inputType="textAutoComplete"
                        android:hint="@string/title_hint"
                        android:paddingTop="@dimen/card_inner"
                        />

                <AutoCompleteTextView
                        android:id="@+id/host"
                        android:paddingTop="@dimen/card_inner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/form_text"
                        android:hint="@string/host_hint"
                        />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:paddingTop="0dp"
                        android:paddingBottom="@dimen/card_spacing"
                        >

                    <EditText
                            android:id="@+id/date"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/card_inner"
                            android:hint="@string/date_hint"
                            android:textSize="@dimen/form_text"
                            android:editable="false"
                            />

                    <EditText
                            android:id="@+id/start_time"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/start_time_hint"
                            android:textSize="@dimen/form_text"
                            android:editable="false"
                            />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:paddingTop="0dp"
                        android:paddingBottom="@dimen/card_spacing"
                        >

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/card_inner_date_text"
                            android:text="@string/ends_at"
                            android:textSize="@dimen/form_text"
                            />

                    <EditText
                            android:id="@+id/end_time"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/end_time_hint"
                            android:textSize="@dimen/form_text"
                            android:editable="false"
                            />

                </LinearLayout>

                <AutoCompleteTextView
                        android:id="@+id/locationTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/card_inner"
                        android:textSize="@dimen/form_text"
                        android:hint="@string/place_hint"
                        />

                <AutoCompleteTextView
                        android:id="@+id/locationAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/card_inner"
                        android:textSize="@dimen/form_text"
                        android:hint="@string/address_hint"
                        />

                <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/form_text"
                        android:hint="@string/text_hint"
                        android:paddingTop="@dimen/card_inner"
                        android:inputType="textMultiLine"
                        android:gravity="bottom"
                        android:maxLines="10"
                        />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/PaletteBlackHalfOpacity"
            android:visibility="gone"
            />

    <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            />

</FrameLayout>
